Fix select not working on mobile, make egg group lists variable length, fix pokemon names

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ img{
 }
 
 .list{
-  height: 60vh;
+  max-height: 60vh;
   overflow-y: scroll;
   margin: 0;
   border-bottom-left-radius: 3px;
